--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
+title: Mi Portafolio
+email: torrealba.pedro@gmail.com
 url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: Portafolio de Pedro Torrealba - Director Creativo / Content Manager / Redactor y UX Content
 keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+skills: "Director Creativo - Content Manager - Analista Digital"
+meta_author: "Pedro Torrealba Barra."
 
 # Google webmaster tools
 google_verify:
@@ -33,31 +33,26 @@ color:
 # Footer settings
 footer:
   copyright: Dr. Henry Jekyll
-  location: Location
-  social: Around the Web
-  credits: Credits
+  location: Mi ubicación 🌎
+  social: Mis Redes 🔎
+  credits: Y recuerda 🧐
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
+  - title: linkedin
     url: http://twitter.com/jekyllrb
   - title: facebook
     url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/robok3000
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Miguel Claro 303 dpto 31
+  - line: Providencia, Santiago, RM.
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
-
+credits: La creatividad es ver lo que todo el mundo ve, pero idear un pensamiento nuevo que nunca se ha pensado antes y expresarlo de alguna manera. - Neil DeGrasse Tyson
 # Build settings
 markdown: kramdown
 permalink: pretty
