--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Mi Portafolio
 email: torrealba.pedro@gmail.com
-url: https://robok3000.github.io/freelancer/
+url: https://robok3000.github.io/freelancer
 description: Portafolio de Pedro Torrealba - Director Creativo / Content Manager / Redactor y UX Content
 keywords: "your keywords, separated by commas"
 skills: "Director Creativo - Content Manager - Analista Digital"
